[gd_scene load_steps=10 format=3 uid="uid://bebm1sx3rjxnt"]

[ext_resource type="Script" path="res://modules/corentin/dungeon.gd" id="1_7npxm"]
[ext_resource type="PackedScene" uid="uid://75etcwgcek82" path="res://modules/selim/mob_chamallow/mob_chamallow.tscn" id="2_b7trr"]
[ext_resource type="Texture2D" uid="uid://y3a178nwncq8" path="res://modules/remi/assets/graphics/back.svg" id="2_e6tvr"]
[ext_resource type="PackedScene" uid="uid://d3clduo33km57" path="res://modules/remi/mob_handy_man/mob_handy_man.tscn" id="2_wo6eh"]
[ext_resource type="PackedScene" uid="uid://jsbtpbjcy8rj" path="res://modules/natheo/mob_furuboule/mob_furuboule.tscn" id="3_gj7bq"]
[ext_resource type="PackedScene" uid="uid://da0knsa3x3m8s" path="res://modules/remi/character.tscn" id="3_wdgi3"]
[ext_resource type="PackedScene" uid="uid://jsbtpbjcy8rj" path="res://modules/natheo/mob_cuteplant/mob_cuteplant.tscn" id="4_qh0gm"]
[ext_resource type="PackedScene" uid="uid://bvo61s1yid5cv" path="res://modules/nathan/sliminou_gang/sliminou_gang.tscn" id="5_fgmgm"]
[ext_resource type="PackedScene" uid="uid://dl37003wsb2n1" path="res://modules/corentin/mob_trash/mob_trash.tscn" id="6_c1xnk"]

[node name="Dungeon" type="Node2D"]
script = ExtResource("1_7npxm")
MOB_SCENES = Array[PackedScene]([ExtResource("2_b7trr"), ExtResource("3_gj7bq"), ExtResource("4_qh0gm"), ExtResource("5_fgmgm"), ExtResource("6_c1xnk")])
BOSS_SCENES = Array[PackedScene]([ExtResource("2_wo6eh")])
BOSS_ROOM_PERIOD = 5

[node name="Background" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture = ExtResource("2_e6tvr")

[node name="Sprite2D2" type="Sprite2D" parent="Background"]
scale = Vector2(0.444278, 0.463389)
texture = ExtResource("2_e6tvr")

[node name="RoomContent" type="Node2D" parent="."]
position = Vector2(0, 100)

[node name="Character" parent="." instance=ExtResource("3_wdgi3")]

[connection signal="just_died" from="Character" to="." method="_on_character_just_died"]
